# clutchless

./: .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  DEVELOPER.rst  README.rst  justfile  pyproject.toml
.github/workflows/: main.yml
clutchless/: __init__.py  __main__.py  command.py  configuration.py  console.py  logging.conf  search.py  stream.py  torrent.py  transmission.py  verify.py
clutchless/command/: add.py  archive.py  command.py  dedupe.py  factory.py  find.py  link.py  organize.py  other.py  rename.py
clutchless/command/prune/: client.py  folder.py
clutchless/domain/: torrent.py
clutchless/entrypoints/: cli.py
clutchless/message/: add.py  archive.py  find.py  link.py  organize.py  prune.py
clutchless/parse/: add.py  archive.py  find.py  link.py  organize.py  prune.py  shared.py
clutchless/parse/prune/: client.py  folder.py  main.py
clutchless/service/: file.py  files.py  torrent.py
clutchless/spec/: add.py  archive.py  dedupe.py  find.py  link.py  organize.py  rename.py  shared.py
clutchless/spec/prune/: client.py  folder.py
clutchless/subcommand/: add.py  archive.py  find.py  link.py  organize.py  other.py  prune.py
clutchless/subcommand/prune/: client.py  folder.py
docker/: clutchless.df  docker-compose.yml  start-script.sh  transmission.df
docker/integration/: clutchless.df  docker-compose.yml  start-script.sh  transmission.df
docker/resources/: client_setup.py  list_torrents.py  remove_torrents.py
tests/: mock_fs.py  test_colorama.py  test_command_factories.py  test_console.py  test_mock_fs.py  test_organize.py  test_search.py  test_torrent.py  test_transmission.py
tests/integration/: test_torrent.py
tests/integration/assets/: being_earnest.torrent
tests/integration/domain/: test_torrent.py
tests/integration/service/: test_file.py
tests/parse/: test_shared.py
tests/unit/: test_command_factories.py  test_files.py  test_search.py  test_stream.py  test_torrent.py  test_transmission.py
tests/unit/command/: add.py  test_add.py  test_archive.py  test_dedupe.py  test_find.py  test_link.py  test_organize.py  test_prune_client.py  test_prune_folder.py  test_rename.py
tests/unit/domain/: test_torrent.py
tests/unit/parse/: test_find.py  test_shared.py
tests/unit/service/: test_file.py  test_files.py  test_torrent.py
tests/unit/spec/: test_docopt.py  (+1 more)
(+6 files in other folders)
