[tool.poetry]
name = "clutchless"
version = "0.1.0.dev3"
description = "A CLI tool to manage torrents and their data in Transmission"
authors = ["mhadam <michael@hadam.us>"]
repository = "https://github.com/mhadam/clutchless"
documentation = "https://github.com/mhadam/clutchless"
readme = "README.rst"
license = "MIT"
packages = [{ include = "clutchless" }]

[tool.poetry.scripts]
clutchless = 'clutchless.console:main'

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
torrentool = "^1.0.2"
"bencode.py" = "^2.1.0"
texttable = "^1.6.2"
colorama = "^0.4.3"
transmission-clutch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
