[tool.poetry]
name = "clutchless"
version = "0.1.0.dev8"
description = "A CLI tool to manage torrents and their data in Transmission"
authors = ["mhadam <michael@hadam.us>"]
repository = "https://github.com/mhadam/clutchless"
documentation = "https://github.com/mhadam/clutchless"
readme = "README.rst"
license = "MIT"
packages = [{ include = "clutchless" }]

[tool.poetry.scripts]
clutchless = 'clutchless.entrypoints.cli:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = "^5.2.1"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
