[tool.poetry]
name = "clutchless"
version = "0.1.0-alpha.10"
description = "A CLI tool to manage torrents and their data in Transmission"
authors = ["mhadam <michael@hadam.us>"]
repository = "https://github.com/mhadam/clutchless"
documentation = "https://github.com/mhadam/clutchless"
readme = "README.rst"
license = "MIT"
packages = [{ include = "clutchless" }]

[tool.poetry.scripts]
clutchless = 'clutchless.entrypoints.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"
transmission-clutch = "^6.0.0"
torrentool = "^1.1.0"
texttable = "^1.6.3"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
coverage = "^5.2.1"
coveralls = "^2.1.2"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.14.0"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
